crates/cockpitctl-domain-buildfix/tests/snapshots/buildfix_tests__auto_apply_up_to_guarded.snap
---
source: crates/cockpitctl-domain-buildfix/tests/buildfix_tests.rs
expression: up_to_guarded
---
[
  {
    "fix_id": "safe-fix",
    "sensor_id": "sensor",
    "safety": "safe",
    "description": "description for safe-fix",
    "matched_findings": [
      {
        "sensor_id": "sensor",
        "code": "E001",
        "fingerprint": "fp-1"
      }
    ],
    "unmatched": false
  },
  {
    "fix_id": "guarded-fix",
    "sensor_id": "sensor",
    "safety": "guarded",
    "description": "description for guarded-fix",
    "matched_findings": [
      {
        "sensor_id": "sensor",
        "code": "E002",
        "fingerprint": "fp-2"
      }
    ],
    "unmatched": false
  }
]
