crates/cockpitctl-domain-buildfix/tests/snapshots/buildfix_tests__empty_plan_empty_highlights.snap
---
source: crates/cockpitctl-domain-buildfix/tests/buildfix_tests.rs
expression: summary
---
{
  "fixes": [],
  "total_fixes": 0,
  "matched_count": 0,
  "unmatched_count": 0
}
