crates/cockpitctl-domain-buildfix/tests/snapshots/buildfix_tests__exact_match_applies_fix.snap
---
source: crates/cockpitctl-domain-buildfix/tests/buildfix_tests.rs
expression: summary
---
{
  "fixes": [
    {
      "fix_id": "fix-exact",
      "sensor_id": "sensor",
      "safety": "safe",
      "description": "description for fix-exact",
      "matched_findings": [
        {
          "sensor_id": "sensor",
          "code": "ERR001",
          "fingerprint": "fp-1"
        }
      ],
      "unmatched": false
    }
  ],
  "total_fixes": 1,
  "matched_count": 1,
  "unmatched_count": 0
}
