crates/cockpitctl-domain-buildfix/tests/snapshots/buildfix_tests__no_matching_fixes.snap
---
source: crates/cockpitctl-domain-buildfix/tests/buildfix_tests.rs
expression: summary
---
{
  "fixes": [
    {
      "fix_id": "fix-1",
      "sensor_id": "sensor",
      "safety": "safe",
      "description": "description for fix-1",
      "matched_findings": [],
      "unmatched": true
    }
  ],
  "total_fixes": 1,
  "matched_count": 0,
  "unmatched_count": 1
}
