crates/cockpitctl-domain-buildfix/tests/snapshots/buildfix_tests__require_matched_filters.snap
---
source: crates/cockpitctl-domain-buildfix/tests/buildfix_tests.rs
expression: selected
---
[
  {
    "fix_id": "matched-fix",
    "sensor_id": "sensor",
    "safety": "safe",
    "description": "description for matched-fix",
    "matched_findings": [
      {
        "sensor_id": "sensor",
        "code": "E001",
        "fingerprint": "fp-1"
      }
    ],
    "unmatched": false
  }
]
